# Noise-detector

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py
noise_detector/: analyzer.py  app.py  cli.py
templates/: result.html
